incluir mais um comentário

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 /* Margins criam um espaçamento ao redor do elemento. Paddings criam um espaçamento dentro do elemento. É possível configurar valores de margins diferentes para cada lado. */
 /* Além do github da pra usar o Vercel para publicar */
 /* CLICAR . no teclado para abrir a tela do vscode, fazer alteração, dar CRTL+S para salvar, escrever qual é a mudança e clicar no check para enviar */
+/* Github não executa codigo apenas deploy da aplicação através do Github Pages */
 
 :root { /* Serve para pegar o código da cor no projeto(FIGMA) e criar o nome da variavel, assim não precisa digitar o código, pode ser qualquer coisa */
     --branco-principal: #FFFFFF;
